--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -1,6 +1,11 @@
-<header id="top-nav">
-  <div id="brand">Yoon Overflow</div>
-</header>
-<section class="container">
 
-</section>
+<div class="container">
+
+  <div id="questions-container">
+  <%Question.all.each do |question|%>
+    <h2 id="question-title"><%=question.title%></h2>
+    <h4 id="question-user"><%=question.user.name%></h4>
+<!--     <p  id="question-content"><%=question.content%></p> -->
+  <%end%>
+</div>
+</div>  
