add more CSS and small updates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>YoonOverflow</title>
-    <%= stylesheet_link_tag 'application' %>
-    <%= javascript_include_tag 'application' %> 
-    <%= csrf_meta_tags %>
-<header id="top-nav">
-  <div id="brand"><h1>Yoon Overflow</h1></div>
-</header>
-</head>
+  <head>
+    <title>YoonOverflow</title>
+      <%= stylesheet_link_tag 'application' %>
+      <%= javascript_include_tag 'application' %> 
+      <%= csrf_meta_tags %>
+    <header id="top-nav">
+      <div id="brand"><h1>Yoon Overflow</h1></div>
+    </header>
+  </head>
 
-<body>
-<%= yield %>
-</body>
+  <body>
+    <%= yield %>
+  </body>
 
-<footer>Yoon ITL Fortune 500</footer>
+<!--   <footer>Yoon ITL Fortune 500</footer> -->
 </html>
