--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,14 +13,13 @@
  *= require_tree .
  *= require_self
  */
-header {
-
+#top-nav{
+  margin-bottom: 35px;
 }
 
-
 #brand {
-  text-align: center;
   font-size: 25px;
+  text-align: center;
 }
 
 #questions-container {
@@ -28,9 +27,8 @@ header {
 }
 
 #question-title {
-  text-decoration: underline;
   margin-bottom: 3px;
-
+  text-decoration: underline;
 }
 
 #question-user {
@@ -41,11 +39,36 @@ header {
 
 }*/
 
-footer {
-  position:absolute;
-  width:100%;
-  bottom:0px;
-  font-size: 20px;
-  text-align: center;
+/*#votes { 
+  text-decoration: none;
+  display: inline;
+  vertical-align: sub;
+}*/
+
+.arrow-up {
+  width: 0; 
+  height: 0; 
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid black;
 }
 
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid black;
+}
+
+/*footer {
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   height: 30px;
+   background: #6cf;
+}*/
+
+a {
+  color: black;
+}
