--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,34 @@
 
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+<div class="container">
+	<div style="padding: 1px">
+			<div class="col-md-4"> 
+				<%= image_tag @user.avatar_url %>
+			</div>
 
-<div class="col-md-4"> <%= image_tag @user.avatar_url %></div>
-<div class="col-md-4"><h1><%= @user.name %></h1></div>
-</br>Biography : <%= @user.bio %>
-</br>Email : <%= @user.email %>
+			<div class="col-md-4">
+				<h1><%= @user.name %></h1>
+			    </br><b>Biography :</b> <%= @user.bio %>
+			</br>
+		</br>
+		        </br><b>Email : </b> <%= @user.email %>
+	        </div>
+	</div>
 
-<h2> Question asked : </h2>
+	<div>
+		<div class="col-md-8"> 
+			<h2> Question asked : </h2>
+			<% @user.questions.each do |question| %>
+			<p> <%= link_to question.content, question %> </p>
+			<% end %>
+		</div>
 
-<% @user.questions.each do |question| %>
-<p> <%= link_to question.content, question %> </p>
+		<div class="col-md-8">
+			<h2> Question Answered : </h2>
+			<% @user.given_answers.each do |answer| %>
+			<p>	<%= link_to answer.content, answer.question %> </p>
+			<% end %>
+		</div>
 
-<% end %>
-
- <h2> Question Answered : </h2>
-
-<% @user.given_answers.each do |answer| %>
-<p>	<%= link_to answer.content, question_answer_path(answer.question,answer) %> </p>
-<% end %>
-
-<!-- /questions/:question_id/answers/:id -->
+	</div>
+</div>
