--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -1,9 +1,9 @@
 <div class="container">
 
-  <div id="questions-container">
+  <div class="questions-container">
     <% @questions.each do |question| %>
 
-      <div id="votes">
+      <div class="votes">
         <div class="arrow-up"></div>
           <br>
         <div class="arrow-down"></div>
