--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -9,10 +9,10 @@
         <div class="arrow-down"></div>
       </div>
 
-      <a href="/questions/<%= question.id %>"><h2 id="question-title"><%= question.title %></h2></a>
-      <a href="/users/<%= question.user.id %>"><h4 id="question-user"><%=question.user.name%></h4></a>
+      <a id="question-link" href="/questions/<%= question.id %>"><h2 id="question-title"><%= question.title %></h2></a>
+      <a id="user-link" href="/users/<%= question.user.id %>"><h4 id="question-user"><%=question.user.name%></h4></a>
 <!--     <p  id="question-content"><%=question.content%></p> -->
-    
+
     <% end %>
   </div>
-</div>  
+</div>
