--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -4,9 +4,16 @@
     <% @questions.each do |question| %>
 
       <div id="votes">
-        <div class="arrow-up"></div>
+<!--         <div class="arrow-up"> </div>
           <br>
-        <div class="arrow-down"></div>
+        <div class="arrow-down"></div> -->
+        <% if current_user %>
+          <%= link_to "upvote", question_user_like_path(question, current_user), method: :put %>
+          <%= link_to "downvote", question_user_dislike_path(question, current_user), method: :put %>
+        <% else %>
+          <%= link_to "upvote", new_user_session_path %>
+          <%= link_to "downvote", new_user_session_path %>
+        <% end %>
       </div>
 
       <a id="question-link" href="/questions/<%= question.id %>"><h2 id="question-title"><%= question.title %></h2></a>
