--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,14 +13,54 @@
  *= require_tree .
  *= require_self
  */
-#top-nav{
-  margin-bottom: 35px;
+
+/**************** LAYOUT ****************/
+
+html {
+  background-color: #ECECEA;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
-#brand {
+header {
   font-size: 25px;
+  margin: 0;
+  padding: .75%;
+  display: inline-block;
+  width: 100%;
+  background: #558C89;
+  color: #ECECEA;
   text-align: center;
 }
+
+header a {
+  text-decoration: none;
+  color: #ECECEA;
+}
+
+header a:hover {
+  color: #D9853B;
+}
+
+footer {
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  background: #558C89;
+  text-align: center;
+  padding-top: 10px;
+  color: #ECECEA;
+
+}
+
+a, p, h1, h2, h3, h4, h5 {
+  color: #558C89;
+}
+
+link:hover {
+  color: #74AFAD;
+}
+
+/**************** QUESTIONS / ANSWERS ****************/
 
 .questions-container {
   padding-left: 15px;
@@ -33,13 +73,39 @@
 
 .question-user {
   margin-top: 3px;
+  margin-left: 20px;
 }
 
+#page-break {
+  border-bottom: 1px dashed #558C89;
+  margin-bottom: 10px;
+}
+
+.answer {
+  padding-left: 15px;
+  border: 2px solid #558C89;
+  margin-bottom: 10px;
+}
+
+.answer-user {
+  margin-top: 3px;
+  margin-left: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.answer-container {
+  margin-left: 15px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+/**************** VOTES ****************/
 
 .votes { 
   display: block;
   float: left;
-  margin-right: 6px;
+  margin-right: 8px;
 }
 
 .arrow-up {
@@ -51,7 +117,7 @@
 }
 
 .arrow-up:hover {
-  border-bottom: 6px solid red;
+  border-bottom: 6px solid #D9853B;
 }
 
 .arrow-down {
@@ -63,29 +129,7 @@
 }
 
 .arrow-down:hover {
-  border-top: 6px solid red;
-}
-
-/*footer {
-   position: absolute;
-   bottom: 0;
-   width: 100%;
-   height: 30px;
-   background: #6cf;
-}*/
-
-a {
-  color: black;
-}
-
-
-#page-break {
-  border-bottom: 1px dashed black;
-  margin-bottom: 10px;
-}
-
-.answer {
-  padding-left: 15px;
+  border-top: 6px solid #D9853B;
 }
 
 
