--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,13 @@
       <%= stylesheet_link_tag 'application' %>
       <%= javascript_include_tag 'application' %> 
       <%= csrf_meta_tags %>
-    <header id="top-nav">
-      <div id="brand"><h1>Yoon Overflow</h1></div>
-    </header>
   </head>
-
+<header>
+  <h1><a href='/'>Yoon Overflow</a></h1>
+</header>
   <body>
     <%= yield %>
   </body>
 
-<!--   <footer>Yoon ITL Fortune 500</footer> -->
+  <footer>Yoon ITL Fortune 500</footer>
 </html>
