Change the way answered questions are dislpayed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
 <div class="container">
 	<div style="padding: 1px">
-			<div class="col-md-4"> 
+			<div class="col-md-4">
 				<%= image_tag @user.avatar_url %>
 			</div>
 
@@ -16,17 +16,17 @@
 	</div>
 
 	<div>
-		<div class="col-md-8"> 
+		<div class="col-md-8">
 			<h2> Question asked : </h2>
 			<% @user.questions.each do |question| %>
-			<p> <%= link_to question.content, question %> </p>
+			<p> <%= link_to question.title, question %> </p>
 			<% end %>
 		</div>
 
 		<div class="col-md-8">
 			<h2> Question Answered : </h2>
 			<% @user.given_answers.each do |answer| %>
-			<p>	<%= link_to answer.content, answer.question %> </p>
+			<p>	<%= link_to answer.question.title, answer.question %> </p>
 			<% end %>
 		</div>
 
