--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,1 +1,6 @@
-new.html.erb
+<%= fields_for answer do |f| %>
+  <%= f.label :content%>:
+  <%= f.text_field :content%><br />
+
+  <%= f.submit %>
+<% end %>
