commit before pulling from master

--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,6 +1,12 @@
-<%= fields_for answer do |f| %>
-  <%= f.label :content%>:
-  <%= f.text_field :content%><br />
+<div class="container">
 
-  <%= f.submit %>
-<% end %>
+  <div id="new-answer">
+    <% form_for @answer do |f| %>
+      <%= f.label :content%>:
+      <%= f.text_field :content%><br />
+
+      <%= f.submit %>
+    <% end %>
+  </div>
+
+</div>
