--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,7 +56,7 @@ a, p, h1, h2, h3, h4, h5 {
   color: #558C89;
 }
 
-link:hover {
+a:hover {
   color: #74AFAD;
 }
 
@@ -68,36 +68,33 @@ link:hover {
 
 .question-title {
   margin-bottom: 3px;
+  margin-left: 35px;
   text-decoration: underline;
 }
 
 .question-user {
   margin-top: 3px;
-  margin-left: 20px;
-}
-
-#page-break {
-  border-bottom: 1px dashed #558C89;
-  margin-bottom: 10px;
+  margin-left: 35px;
 }
 
 .answer {
   padding-left: 15px;
   border: 2px solid #558C89;
   margin-bottom: 10px;
+  padding: 15px;
 }
 
 .answer-user {
   margin-top: 3px;
-  margin-left: 20px;
-  margin-top: 0px;
+  margin-left: 35px;
   margin-bottom: 0px;
+
 }
 
-.answer-container {
-  margin-left: 15px;
+.answer-content {
+  margin-left: 35px;
   margin-top: 0px;
-  margin-bottom: 0px;
+
 }
 
 /**************** VOTES ****************/
@@ -111,25 +108,25 @@ link:hover {
 .arrow-up {
   width: 0; 
   height: 0; 
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid black;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid black;
 }
 
 .arrow-up:hover {
-  border-bottom: 6px solid #D9853B;
+  border-bottom: 8px solid #D9853B;
 }
 
 .arrow-down {
   width: 0; 
   height: 0; 
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid black;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 8px solid black;
 }
 
 .arrow-down:hover {
-  border-top: 6px solid #D9853B;
+  border-top: 8px solid #D9853B;
 }
 
 
