--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
 
   <div id="new-answer">
-    <% form_for @answer do |f| %>
+    <%= form_for [@question, @answer] do |f| %>
       <%= f.label :content%>:
-      <%= f.text_field :content%><br />
+      <%= f.text_field :content%>
 
       <%= f.submit %>
     <% end %>
