add edit pages for questions and answers

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,7 +1,7 @@
  <div id="new-answer">
   <%= form_for [@question, @answer] do |f| %>
-    <%= f.label :content%>:
-    <%= f.text_field :content%>
+    <%= f.label :answer %>:
+    <%= f.text_field :content %>
 
     <%= f.submit %>
   <% end %>
