--- a/app/views/answers/edit.html.erb
+++ b/app/views/answers/edit.html.erb
@@ -1,1 +1,8 @@
-edit.html.erb
+ <div id="edit-answer">
+  <%= form_for [@question, @answer] do |f| %>
+    <%= f.label :answer %>:
+    <%= f.text_field :content %>
+
+    <%= f.submit %>
+  <% end %>
+</div>
