--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
+
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+<div class="container">
 	<div style="padding: 1px">
 			<div class="col-md-4">
 				<%= image_tag @user.avatar_url %>
@@ -29,3 +31,4 @@
 		</div>
 
 	</div>
+</div>
