--- a/app/views/static/index.html
+++ b/app/views/static/index.html
@@ -2,9 +2,8 @@
 
   <div id="questions-container">
     <% @questions.each do |question| %>
-
-      <div id="votes">
-<!--         <div class="arrow-up"> </div>
+<!--       <div id="votes">
+ --><!--         <div class="arrow-up"> </div>
           <br>
         <div class="arrow-down"></div> -->
         <% if current_user %>
@@ -14,12 +13,15 @@
           <%= link_to "upvote", new_user_session_path %>
           <%= link_to "downvote", new_user_session_path %>
         <% end %>
-      </div>
+    <div style="background-color: #d3d3d3; margin-bottom: 30px;padding-left: 60px;padding-top: 10px;padding-bottom: 10px">
+      <div style="border:1px solid #666;background: #fff;border-radius: 4px;width:1050px;">
 
       <a id="question-link" href="/questions/<%= question.id %>"><h2 id="question-title"><%= question.title %></h2></a>
       <a id="user-link" href="/users/<%= question.user.id %>"><h4 id="question-user"><%=question.user.name%></h4></a>
 <!--     <p  id="question-content"><%=question.content%></p> -->
 
-    <% end %>
+    </div>
   </div>
-</div>
+    <% end %>
+<!--   </div>
+ --></div>
