--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,7 @@
-<%= form_for @comment do |f| %>
+<%= form_for [@question, @comment] do |f| %>
   <div class="form-group">
     <%= f.label :content %>
     <%= f.text_area :content %>
+    <%= f.submit %>
   </div>
 <% end %>
