add user field,creating registratoin controller,adding registration route for controller

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,11 @@
               <div class="form-wrap">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+    <div class="form-group">
+    <label for="name" class="sr-only">Name</label>
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true ,class: "form-control"%>
+  </div>
 
   <div class="form-group">
     <label for="email" class="sr-only">Email</label>
