--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<div>
 <div style="padding-top: 35px">
 		<div class="col-md-4">
 			<%= image_tag @user.avatar_url %>
@@ -35,3 +36,5 @@
 		<% end %>
 	</div>
 </div>
+</div>
+
