--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,15 +99,15 @@ a:hover {
 
 /**************** VOTES ****************/
 
-.votes { 
+.votes {
   display: block;
   float: left;
   margin-right: 8px;
 }
 
 .arrow-up {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-bottom: 8px solid black;
@@ -118,8 +118,8 @@ a:hover {
 }
 
 .arrow-down {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-left: 8px solid transparent;
   border-right: 8px solid transparent;
   border-top: 8px solid black;
@@ -130,4 +130,42 @@ a:hover {
 }
 
 
+
+/*
+.header {
+    padding-top: 50px;
+    background-color: #eee;
+    overflow: hidden;
+}
+
+*/
+.btn {
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color:#d3d3d3;
+}
+.btn-circle {
+    border-radius: 20px;
+}
+
+.input-group input {
+    border: 0;
+    box-shadow: none;
+    padding-right: 30px;
+}
+.input-group input:focus,
+.input-group input:active {
+    outline: 0;
+    box-shadow: none;
+}
+.input-group-btn:last-child>.btn {
+    z-index: 2;
+    margin-left: -18px;
+    border-radius: 20px;
+}
+
+
+</style>
+  <footer>Yoon ITL Fortune 500</footer>
+</html>
 
