--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,12 @@
 
 /**************** LAYOUT ****************/
 
+.container {
+  width: 1200px;
+  position: relative;
+  top: 100px;
+}
+
 html {
   background-color: #ECECEA;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -165,7 +171,11 @@ a:hover {
 }
 
 
-</style>
+/*</style>
   <footer>Yoon ITL Fortune 500</footer>
 </html>
+*/
+
+
+/**************** PROFILE ****************/
 
