add all JD's stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,7 @@
       <%= javascript_include_tag 'application' %>
       <%= csrf_meta_tags %>
   </head>
-<header>
-</header>
+
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -46,7 +45,6 @@
     background-color: #eee;
     overflow: hidden;
 }
-
 */
 .btn {
     padding-left: 25px;
@@ -56,7 +54,6 @@
 .btn-circle {
     border-radius: 20px;
 }
-
 .input-group input {
     border: 0;
     box-shadow: none;
@@ -72,6 +69,5 @@
     margin-left: -18px;
     border-radius: 20px;
 }
-
-
-
+</style>
+</html>
