--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,19 +1,26 @@
 <div class="container">
 
-  <div class="questions-container">
+  <div id="questions-container">
     <% @questions.each do |question| %>
+        <% if current_user %>
+          <%= link_to "upvote", questions_upvote_path(question), method: :put %>
+          <%= question.votes.count %>
+          <%= link_to "downvote", questions_downvote_path(question), method: :put %>
+        <% else %>
+          <%= link_to "upvote", new_user_session_path %></br>
+          <%= link_to "downvote", new_user_session_path %>
+        <% end %>
 
-      <div class="votes">
-        <% link_to votes question_upvote do %><div class="arrow-up"></div><% end %>
-          <br>
-        <div class="arrow-down"></div>
-      </div>
 
-      <h2 class="question-title"><%= link_to question.title, question %></h2>
-      <a id="user-link" href="/users/<%= question.user.id %>"><h4 class="question-user"><%=question.user.name %></h4></a>
+    <div style="background-color: #d3d3d3; margin-bottom: 30px;padding-left: 60px;padding-top: 10px;padding-bottom: 10px">
+      <div style="border:1px solid #666;background: #fff;border-radius: 4px;width:1050px;">
 
-    <% end %>
+      <a id="question-link" href="/questions/<%= question.slug %>"><h2 id="question-title"><%= question.title %></h2></a>
+      <a id="user-link" href="/users/<%= question.user.slug %>"><h4 id="question-user"><%=question.user.name%></h4></a>
+<!--     <p  id="question-content"><#%=question.content%></p> -->
+
+    </div>
   </div>
-
-
+    <% end %>
+</div>
 </div>
