--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 	    <div>
 				<hr></hr>
 				<div class="col-md-6">
-					<h3>Questions</h3>
+					<h3><%= @user.questions.count %> Questions</h3>
 					<hr></hr>
 					<% @user.questions.each do |question| %>
 						<p><%= link_to question.title, question %></p>
@@ -16,7 +16,7 @@
 				</div>
 
 				<div class="col-md-6 profile">
-					<h3>Answers</h3>
+					<h3><%= @user.given_answers.count %> Answers</h3>
 					<hr></hr>
 					<% @user.given_answers.each do |answer| %>
 						<p><%= link_to answer.question.title, answer.question %></p>
