--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -11,16 +11,7 @@
           <%= link_to "downvote", new_user_session_path %>
         <% end %>
 
-
-    <div style="background-color: #d3d3d3; margin-bottom: 30px;padding-left: 60px;padding-top: 10px;padding-bottom: 10px">
-      <div style="border:1px solid #666;background: #fff;border-radius: 4px;width:1050px;">
-
-      <a id="question-link" href="/questions/<%= question.slug %>"><h2 id="question-title"><%= question.title %></h2></a>
-      <a id="user-link" href="/users/<%= question.user.slug %>"><h4 id="question-user"><%=question.user.name%></h4></a>
-<!--     <p  id="question-content"><#%=question.content%></p> -->
-
-    </div>
-  </div>
+      <h2 class="question-title"><%= link_to question.title, question %></h2>
+      <h4><%= link_to question.user.name, profile_path(question.user.slug) %></h4>
     <% end %>
-</div>
 </div>
