--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,19 +1,3 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-
 /**************** LAYOUT ****************/
 
 .container {
@@ -63,6 +47,29 @@ html {
 }
 
 
+/************** INDEX **************/
+
+table {
+  width: 100%;
+  margin: auto;
+}
+
+.small-data {
+  border-bottom: 1px solid #CFCFCF;
+  text-align: center;
+  width: 70px;
+  padding-left: 60px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#question-data {
+  border-bottom: 1px solid #CFCFCF;
+  padding-left: 70px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
 /*
 .header {
