--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,30 +1,26 @@
-<% @questions.each do |question| %>
-  <div id="questions-container">
+<div class="index-container">
 
-    <div class="col-md-1">
-      <div class="arrow-up"></div><br>
-      <div class="arrow-down"></div>
-    </div>
+  <h2>Top Questions</h2>
 
-    <div class="col-md-1">
-      <%= question.votes.count %>
-    </div>
+  <table>
+    <% @questions.each do |question| %>
+      <tr>
+        <td class="small-data">
+          <div class="arrow-up"></div><br>
+          <div class="arrow-down"></div>
+        </td>
 
-    <div class="col-md-1">
-      <%= question.answers.count %>
-    </div>
+        <td class="small-data"><%= question.answers.count %>
+          <br>Answers</td>
 
-    <div class="col-md-9">
-      <h4><%= link_to question.title, question_path(question) %></h4>
-      <%= link_to question.user.name, profile_path(question.user.slug) %>
-    </div>
+        <td id="question-data"><h4><%= link_to question.title, question_path(question) %></h4>
+        asked by <%= link_to question.user.name, profile_path(question.user.slug) %> at <%= question.created_at %></td>
 
-  <hr></hr>
+      </tr>
+    <% end %>
+  </table>
 
-  </div>
-<% end %>
-
-
+</div>
 
 
 
