added bootstrap.min.css file, properly linked files together

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,53 +1,20 @@
-/**************** LAYOUT ****************/
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+ * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any styles
+ * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
+ * file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ *= require bootstrap.min
+ */
 
-.container {
-  width: 1200px;
-  position: relative;
-  top: 100px;
-}
-
-html {
-  background-color: #ECECEA;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-}
-
-
-/**************** QUESTIONS / ANSWERS ****************/
-
-
-
-.votes {
-  display: block;
-  float: left;
-  margin-right: 8px;
-}
-
-.arrow-up {
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 8px solid black;
-}
-
-.arrow-up:hover {
-  border-bottom: 8px solid #D9853B;
-}
-
-.arrow-down {
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-top: 8px solid black;
-}
-
-.arrow-down:hover {
-  border-top: 8px solid #D9853B;
-}
-
-
-/************** INDEX **************/
 
 table {
   width: 100%;
@@ -71,44 +38,20 @@ table {
   padding-bottom: 10px;
 }
 
-/*
-.header {
-    padding-top: 50px;
-    background-color: #eee;
-    overflow: hidden;
-}
-
-*/
-.btn {
-    padding-left: 25px;
-    padding-right: 25px;
-    background-color:#d3d3d3;
-}
-.btn-circle {
-    border-radius: 20px;
-}
-
-.input-group input {
-    border: 0;
-    box-shadow: none;
-    padding-right: 30px;
-}
-.input-group input:focus,
-.input-group input:active {
-    outline: 0;
-    box-shadow: none;
-}
-.input-group-btn:last-child>.btn {
-    z-index: 2;
-    margin-left: -18px;
-    border-radius: 20px;
-}
 
 
-/*</style>
-  <footer>Yoon ITL Fortune 500</footer>
-</html>
-*/
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid black;
+}
 
-
-/**************** PROFILE ****************/
+.arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 8px solid black;
+}
