--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
 <head>
   <title>YoonOverflow</title>
-  <%= stylesheet_link_tag 'application' %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-default">
       <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation">
@@ -22,11 +21,12 @@
     </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="navigation">
-        <ul class="nav navbar-nav navbar-right">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+
           <% unless current_user %>
-          <li><button type="button" class="btn btn-success navbar-btn btn-circle"><%= link_to 'Signup', new_user_registration_path  %></button></li>
-          <li><button type="button" class="btn btn-success navbar-btn btn-circle"><%= link_to 'Signin', new_user_session_path  %></button></li>
+          <li><%= link_to 'Signup', new_user_registration_path  %></li>
+          <li><%= link_to 'Signin', new_user_session_path %></li>
           <% else %>
           <li><%= link_to 'My Profile', profile_path(current_user.id) %></li>
           <li><%= link_to 'Logout', destroy_user_session_path ,method: :delete %></li>
