--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,14 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
 
           <% unless current_user %>
-          <li><%= link_to 'Signup', new_user_registration_path  %></li>
-          <li><%= link_to 'Signin', new_user_session_path %></li>
+          <li><%= button_to 'Signup', new_user_registration_path, class: "btn btn-primary btn-sm", method: :get %></li>
+          <li><%= button_to 'Signin', new_user_session_path, class: "btn btn-primary btn-sm", method: :get %></li>
           <% else %>
-          <li><%= link_to 'My Profile', profile_path(current_user.id) %></li>
-          <li><%= link_to 'Logout', destroy_user_session_path ,method: :delete %></li>
+          <li><%= button_to 'My Profile', profile_path(current_user.id), class: "btn btn-primary btn-sm",method: :get %></li>
+          <li><%= button_to 'Logout', destroy_user_session_path, class: "btn btn-primary btn-sm", method: :delete %></li>
           <% end %>
         </ul>
       </nav>
